# Projeto-Integrador-RedFox

RedFox-Futebol-Backend/: pyproject.toml
RedFox-Futebol-Backend/RedFox/models/: ingresso.py  partida.py  time.py
RedFox-Futebol-Backend/config/: settings.py  urls.py
RedFox-Futebol-ReactNative/screens/: HomeScreen.js
RedFox-Futebol-vue3/src/: App.vue
RedFox-Futebol-vue3/src/components/: HomeScreen.vue
