[project]
name = "RedFox-Futebol-Backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel", email = "danielmoggi2019@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
