[project]
name = "RedFox-Futebol-Backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel", email = "danielmoggi2019@gmail.com"},
]
dependencies = [
    "django>=4.2.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
